<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="retrofit_description">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="loadapp_description">LoadApp - Current Repository by Udacity</string>
    <string name="glide_description">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_notification_channel_id">download_channel</string>
    <string name="loadapp_notification_channel_name">Download</string>
    <string name="download_finished">Download of %s finished</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="success">Success</string>
    <string name="close">Close</string>
    <string name="download_not_found">Couldn\'t get downloaded file back</string>
    <string name="check_detail">Check Details</string>
    <string name="download_libraries">Download Libraries</string>
</resources>
